samples/_failures_safe/1761475388_c76856_compile_base_compile_error/stderr.txt
./samples/SAFE/__tmp_0982bcb9.c: In function ‘tokenize’:
./samples/SAFE/__tmp_0982bcb9.c:172:9: error: expected expression at end of input
  172 |         tokens[token_count].value[0] =
      |         ^~~~~~
./samples/SAFE/__tmp_0982bcb9.c:172:9: error: expected declaration or statement at end of input
./samples/SAFE/__tmp_0982bcb9.c:172:9: error: expected declaration or statement at end of input
